--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,53 @@
 .bg-oliva{
     background-color: #749D4B; /* Verde Alga */
 }
+.text-oliva{
+    color: #749D4B; /* Verde Alga */
+
+}
+.body{
+    background-color: #ffffff;
+}
 .bi-truck{
     color: #ffffff; /* Letras blancas */
+    padding-right: 3px;
     font-size: 30px;
 }
+.letra-kanit-300{
+    font-family: 'Kanit', sans-serif;
+    font-weight: 300;
+}
+.letra-kanit-700{
+    font-family: 'Kanit', sans-serif;
+    font-weight: 700;
 
-.navbar-nav .nav-link.active, .nav-link, .navbar-brand{
+}
+.navbar{
+    margin-bottom: 10px;
+
+}
+.navbar-nav .nav-link.active, .nav-link{
     color: #ffffff; /* Letras blancas */
+    font-family: 'Kanit', sans-serif;
+    font-weight: 300;
+}
+.link-ingresar{
+    color:#1E1604;
 }
 .nav-link:hover{
     color: #161E05; /* Letras blancas */
 }
+.link-ingresar:hover{
+    color:#ffffff;
+}
+.navbar-brand{
+    font-family: 'Kanit', sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    padding-left: 2px;
+    color: #ffffff; /* Letras blancas */
+}
+
 .navbar-collapse{
     align-items: left;
     justify-content: space-between;
@@ -22,19 +58,43 @@
 }
 /*Footer*/
 footer{
-    min-height: 300px;;
+    min-height: 300px;
+    padding-top:100px;
 }
 .footer-texto{
-    font-size: 1.5rem;
-    padding:15px;
-    margin-bottom: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1rem;
+    padding-top:0px;
+    margin-top: -10px;
+    padding-bottom: 10px;
 
+    margin-bottom: 10px;
+    color:#1E1604;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 300;
+
+}
+.footer-texto-logo{
+    font-size: 1.5rem;
+    margin-top:-2px;
+    margin-bottom: 3px;
+    color:#1E1604;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 700;
+
+}
+
+.truck-2{
+    color:#1E1604;
+    padding-top: 15px;
+    padding-bottom: 0px;
+    font-size: 80px;
+    margin-bottom: -30px;
 }
 .footer-logo{
     width: 80px;
     height: 80px;
-    margin:5px;
+    margin-top:15px;
+    margin-bottom:-3px;
 }
 .iconos-redes-sociales a{
     width: 50px;
@@ -67,6 +127,36 @@ footer{
     font-size: 15px;
     padding: 20px;
 }
+.seccion-oscura {
+    color: white;
+    background-color: #1E1604;
+}
+
+.login h2{
+    font-size: 40px;;
+}
+.login{
+    padding-top: 0px;
+    padding-bottom: 10px;
+}
+.btn-oliva{
+    background-color: #749D4B;
+    color: #ffffff;
+}
+.btn:hover{
+    background-color: white;
+    color: #749D4B;
+}
+.c-ingresos{
+    border-radius: 8px;;
+    max-width: 500px;
+    min-height: 200px;
+    padding:20px;
+}
+
+
+
+
 
 
 /*Responsive*/
