--- a/css/index.css
+++ b/css/index.css
@@ -154,10 +154,50 @@ footer{
     padding:20px;
 }
 
+.experiencia{
+    padding: 40px 40px 60px 40px;
+}
+
+.experiencia .columna{
+    padding: 20px;
+    border: 2px solid #8080804d;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    transition: all 0.3s ease-in;
+}
+
+.experiencia .columna:hover{
+    color: white;
+    background-color: #749D4B;
+}
+
+.experiencia i{
+    font-size: 2.5rem;
+    color: white;
+    background-color: #161E05;
+    padding: 8px 19px;
+    border-radius: 50%;
+}
 
 
+.experiencia-titulo{
+    font-family: 'Kanit', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    margin: 10px 0;
+}
 
+.badges-contenedor{
+    font-size: 25px;
+    font-weight: bold;
+    margin: 10px 0;
+}
 
+.badges{
+    margin: 5px
+}
 
 /*Responsive*/
 
