--- a/css/index.css
+++ b/css/index.css
@@ -199,6 +199,39 @@ footer{
     margin: 5px
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero{
+    background-color: white;    
+    text-align: center;
+}
+
+.hero-principal{
+    align-items: center;
+}
+
+.hero-imagen-ds{
+    width: 150px;
+    height: 300px;
+}
+
+.seccion-oscura-2 {
+    height: 570px;
+    padding: 10px;
+    color: white;   
+    background-color: #1E1604;
+}
+
+.seccion-oscura-2 .contenedor-sc{
+    max-width: 600px;
+    text-align: center;
+}
+
 /*Responsive*/
 
 @media screen and (max-width: 768px) {
