--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 .bg-oliva{
-    background-color: #749D4B; /* Verde Alga */
+    background-color: #026773; /* Verde Alga */
 }
 .text-oliva{
-    color: #749D4B; /* Verde Alga */
+    color: #026773; /* Verde Alga */
 
 }
 .body{
@@ -97,13 +97,13 @@
     padding-bottom: 10px;
 }
 .btn-oliva{
-    background-color: #749D4B;
+    background-color: #026773;
     color: #ffffff;
 }
 .btn:hover{
-    border: #749D4B;
-    background-color:#dcffb9;
-    color: #749D4B;
+    border: #012E40;
+    background-color:#F2E3D5;
+    color: #012E40;
 }
 .c-ingresos{
     border-radius: 8px;;
@@ -129,7 +129,7 @@
 
 .servicios .columna:hover{
     color: white;
-    background-color: #749D4B;
+    background-color: #012E40;
 }
 
 .servicios i{
@@ -185,7 +185,7 @@ section {
     padding: 20px;
 }
 .seccion-titulo{
-    color: #749D4B;
+    color: #026773;
     text-shadow: 2px 1px 0px white;
     font-size: 30px;
     padding: 15px 0px;
@@ -212,10 +212,10 @@ section {
 }
   
 .reserva button {
-    color: white;
+    color: #F2E3D5;
     font-weight: bold;
     background-color: transparent;
-    border: 2px solid white;
+    border: 2px solid #F2E3D5;
     padding: 1.25em 2em;
     margin: 10px;
     border-radius: 100px;
