--- a/ParkingTruck/commons/templates/account/login.html
+++ b/ParkingTruck/commons/templates/account/login.html
@@ -26,7 +26,7 @@
           {% endif %}
         </div>
         <button type="submit" class="btn btn-oliva letra-kanit-700">Ingresar</button>
-        <p class="mt-3">¿No tienes una cuenta? <a class="text-oliva" href="registro.html">Regístrate aquí</a></p>
+        <p class="mt-3">¿No tienes una cuenta? <a class="text-oliva" href="{% url 'registro' %}">Regístrate aquí</a></p>
       </div>
     </section>
   </form>
