Parte 1 de reservas e historial de reservas

--- a/ParkingTruck/commons/templates/index.html
+++ b/ParkingTruck/commons/templates/index.html
@@ -63,7 +63,7 @@
           ¡Reserva tu espacio de estacionamiento ahora! Nuestro parking está equipado con vigilancia las 24 horas y amplios espacios, garantizando la protección de tu vehículo. Además, nuestro personal está siempre disponible para ayudarte.
         </div>
         <div class="col-12 col-md-4">
-          <a href="html/login.html">
+          <a href="{% url 'login' %}">
             <button type="button" class="btn btn-oliva letra-kanit-700 align-items-center">RESERVA YA!</button>
           </a>
         </div>
