--- a/ParkingTruck/commons/templates/base.html
+++ b/ParkingTruck/commons/templates/base.html
@@ -25,22 +25,37 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarToggler">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="{% url 'index' %}">
           <img class="navbar-logo" src="{% static '/img/logotruck1.svg' %}" alt="Foto Truck"> PARKINGTRUCK
         </a>
         <ul class="navbar-nav d-flex justify-content-center align-items-center">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#nosotros-sec">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#reserva-sec">Reserva</a>
-          </li>
-          <li class="nav-item ingresar">
-            <a class="nav-link link-ingresar" href="{% url 'login' %}">Ingresar</a>
-          </li>
+          
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="userDropdown" role="button" onclick="toggleDropdown()">
+                Bienvenido {{ user.first_name }}
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'historial' %}">Mis reservas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'index' %}">Cerrar Sesión</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url 'index' %}">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#nosotros-sec">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reserva-sec">Reserva</a>
+            </li>
+            <li class="nav-item ingresar">
+              <a class="nav-link link-ingresar" href="{% url 'login' %}">Ingresar</a>
+            </li>
+          {% endif %}
         </ul> 
       </div>
     </div>
